--- a/.env
+++ b/.env
@@ -4,4 +4,13 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./db.db"
+POSTGRES_URL="postgres://default:IJXi2poD3WjS@ep-cold-thunder-a4ebf1xv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:IJXi2poD3WjS@ep-cold-thunder-a4ebf1xv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:IJXi2poD3WjS@ep-cold-thunder-a4ebf1xv-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:IJXi2poD3WjS@ep-cold-thunder-a4ebf1xv.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-cold-thunder-a4ebf1xv-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="IJXi2poD3WjS"
+POSTGRES_DATABASE="verceldb"
+
+AUTH_SECRET=4MyAulkuzeCHGgUHZ4MZkkYdG1CctcPwwP/J+eHFxLU=
