apply for doctor

--- a/.env
+++ b/.env
@@ -14,3 +14,10 @@ POSTGRES_PASSWORD="IJXi2poD3WjS"
 POSTGRES_DATABASE="verceldb"
 
 AUTH_SECRET=4MyAulkuzeCHGgUHZf42fSNK4MZkkYdG1CctcPwwP/J+eHFxLU=
+
+CLOUDINARY_API_KEY=871873583987298
+
+CLOUDINARY_API_SECRET=5SQ5GCJbWCO0QlLvvuJn0RxKNz8
+NEXT_PUBLIC_CLOUDINARY_CLOUD_PRESET=rajkumar264
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=de12ytbyw
+CLOUDINARY_URL=cloudinary://871873583987298:5SQ5GCJbWCO0QlLvvuJn0RxKNz8@de12ytbyw
