--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.20.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
